--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "scripts": ["background.js"]
    },
    "content_scripts": [ {
-      "js": [ "jquery.js", "tooltip.js", "content_script.js" ],
+      "js": [ "jquery-2.0.3.min.js", "tooltip.js", "content_script.js" ],
       "matches": [ "http://*/*", "https://*/*" ]
    } ],
    "icons": {
