--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
       "js": [ "jquery-2.0.3.min.js", "tooltip.js", "content_script.js" ],
       "matches": [ "http://*/*", "https://*/*" ]
    } ],
+   "web_accessible_resources": ["jquery-2.0.3.min.map"],
    "icons": {
       "128": "icon128.png",
       "48": "icon48.png"
